--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-complete-guide",
-  "homepage": "https://anshul7898.github.io/contactus",
+  "homepage": "https://anshul7898.github.io/adduser",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
