--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "redirect": "^0.2.0",
     "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4"
   },
